--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -4,7 +4,9 @@ import logo from "../assets/logos/logo.webp";
 import Person from "./iconos/IconoPerson.astro";
 ---
 
-<nav class="max-w-screen-1920 w-full px-8 sm:px-6 lg:px-16 overflow-hidden">
+<nav
+  class="max-w-screen-1920 1440:w-[1920px] px-8 sm:px-6 lg:px-16 overflow-hidden"
+>
   <div class="flex h-20 md:h-24 w-full items-center justify-between md:px-10">
     <div class="flex items-center" transition:persist>
       <a href="/" class="flex-shrink-0 border-none">
