--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Header from "../components/Header.astro";
 ---
 
 <Layout title="Welcome to Astro.">
-  <main>
+  <main class="flex justify-center items-center">
     <Header />
   </main>
 </Layout>
