--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer
-  class="max-w-screen-1920 w-full bg-black shadow dark:bg-gray-800 h-32 md:h-24 overflow-hidden flex justify-center"
+  class="w-screen bg-black shadow dark:bg-gray-800 h-32 md:h-24 overflow-hidden flex justify-center"
 >
   <div
     class="w-full py-4 px-8 flex flex-col-reverse gap-3 md:flex-row items-center md:justify-between"
