--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,36 +1,67 @@
+---
+import Ipad from "./iconos/IpadPro.astro";
+---
+
 <section
-  class="max-w-screen-1440 w-full px-8 py-12 sm:px-6 lg:px-16 overflow-hidden flex justify-center"
+  class="max-w-screen-1440 w-full px-8 py-12 sm:px-6 lg:px-16 flex flex-col justify-center items-center gap-8"
 >
+  <!-- Primer artículo -->
   <article class="max-w-screen-sm w-full flex flex-col gap-12">
-    <h1 class="leading-[62px] font-extrabold text-[52px] text-center">
-      Explore nuestras soluciones
-      <span
-        style="
-background-image: url(/underline.svg);
-background-repeat: no-repeat;
-background-size: contain;
-background-position: right bottom 5%;
-"
-        >únicas
-      </span> de espacios de trabajo
+    <h1
+      class="leading-[62px] font-extrabold text-[52px] text-center"
+      style="
+    background-image: url(/Shadow.svg);
+    background-repeat: no-repeat;
+    background-size: 200px;
+    background-position: 72% 56%;
+    "
+    >
+      Explore nuestras soluciones únicas de espacios de trabajo
     </h1>
     <p class="text-lg text-center text-gray-500 dark:text-gray-400">
       Con nuestra solución de espacios de trabajo, obtienes una experiencia de
       usuario excepcional.
     </p>
     <div class="flex justify-center gap-4">
-      <a href="/contacto/"
-        ><button
+      <a href="/contacto/">
+        <button
           class="text-lg text-center text-white dark:text-gray-400 border bg-black border-gray-500 dark:border-gray-400 rounded-md px-10 py-3"
-          >Ver espacios</button
-        ></a
-      >
-      <a href="/contacto/"
-        ><button
+        >
+          Ver espacios
+        </button>
+      </a>
+      <a href="/contacto/">
+        <button
           class="text-lg text-center text-black dark:text-gray-400 border bg-white border-gray-500 dark:border-gray-400 rounded-md px-10 py-3"
-          >¿Conectamos?</button
-        ></a
-      >
+        >
+          ¿Conectamos?
+        </button>
+      </a>
     </div>
+  </article>
+
+  <!-- Segundo artículo con el video y el icono del iPad -->
+  <article class="flex justify-center items-center relative">
+    <!-- Video sobre el icono del iPad -->
+    <video
+      class="absolute object-fill rounded-[2rem]"
+      autoplay
+      muted
+      loop
+      playsinline
+      style="width: 974px;"
+    >
+      <source src="/COWORKING.mp4" type="video/mp4" />
+      Tu navegador no soporta la etiqueta de video.
+    </video>
+    <span
+      style="
+    width: 1092px;
+    height: 565px;
+    background-image: url(/IpadPro.svg);
+    background-repeat: no-repeat;
+    background-size: 989px;
+    background-position: 50% 24%;"
+    ></span>
   </article>
 </section>
