--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -46,7 +46,7 @@ const { title } = Astro.props;
   }
 
   body {
-    @apply grid grid-rows-[auto,1fr,auto] min-h-screen min-w-full w-screen;
+    @apply grid grid-rows-[auto,1fr,auto] min-h-screen min-w-full w-screen justify-center overflow-x-hidden justify-items-center;
   }
 
   body > div {
